syntax = "proto3";
package payments.v1;
option go_package = "github.com/kukuhtw/RealTime_MultiCurrency_PG_go/gen/payments/v1;paymentsv1";
import "proto/common/v1/common.proto";
import "proto/risk/v1/risk.proto";

enum PaymentStatus { PAYMENT_STATUS_UNSPECIFIED=0; PENDING=1; CAPTURED=2; FAILED=3; }

message CreatePaymentRequest {
  common.v1.TxRef tx=1;
  common.v1.CustomerRef customer=2;
  common.v1.AccountRef account=3;
  common.v1.Money amount=4;
  common.v1.Currency settlement_currency=5;
  string merchant_id=6; string ip=7; string device_id=8;
  string billing_country=9; string mcc=10;
}

message CreatePaymentResponse {
  string tx_id=1;
  PaymentStatus status=2;
  risk.v1.Decision risk_decision=3;
  uint32 risk_score=4;
  common.v1.Money final_amount=5;
  string reservation_id=6;
  repeated string reasons=7;
}

service PaymentsService { rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse); }
