syntax = "proto3";
package risk.v1;
option go_package = "github.com/kukuhtw/RealTime_MultiCurrency_PG_go/gen/risk/v1;riskv1";
import "proto/common/v1/common.proto";

enum Decision { DECISION_UNSPECIFIED=0; ACCEPT=1; REVIEW=2; DENY=3; }

message ScoreRequest {
  common.v1.TxRef tx=1;
  common.v1.CustomerRef customer=2;
  common.v1.Money amount=3;
  string merchant_id=4;
  string ip=5;
  string device_id=6;
  string billing_country=7;
  string mcc=8;
  uint32 success_24h=9;
  uint32 decline_24h=10;
}

message ScoreResponse {
  string tx_id=1;
  uint32 risk_score=2;
  Decision decision=3;
  repeated string reasons=4;
}

service RiskService { rpc Score(ScoreRequest) returns (ScoreResponse); }
